--- a/Dictionary_Function_Loop_Condition_2025.ipynb
+++ b/Dictionary_Function_Loop_Condition_2025.ipynb
@@ -99,7 +99,7 @@
       "metadata": {
         "id": "jp4_o-f_SMH_"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -114,7 +114,7 @@
         "id": "bRl0yAkZSsgY",
         "outputId": "d798304e-8e3e-48bb-938b-e845fbce1ab7"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +137,7 @@
         "id": "Srs9iqTHS8jW",
         "outputId": "f9420558-e3f3-40e1-b38e-e1445ada9cbd"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -159,7 +159,7 @@
       "metadata": {
         "id": "pzAgTizwTXMR"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -170,7 +170,7 @@
       "metadata": {
         "id": "bqKK5yP1TcbC"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -185,7 +185,7 @@
         "id": "wTUy8m2NTjvi",
         "outputId": "f0e57a7a-a310-4d46-ef9e-254ab72606fb"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -217,7 +217,7 @@
       "metadata": {
         "id": "VioxkqDzUUvv"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -232,7 +232,7 @@
         "id": "RuD3t9H4Uiru",
         "outputId": "f3549768-c616-4cc1-94da-ec11b45b735c"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -330,7 +330,7 @@
       "metadata": {
         "id": "6wzfVo_pTefO"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -345,7 +345,7 @@
         "id": "482E9UnsUMkC",
         "outputId": "657d6145-70f7-4375-94bd-b3138b4c1067"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -366,7 +366,7 @@
         "    st = f'ชื่อ {name}'\n",
         "    return st"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -382,7 +382,7 @@
       "source": [
         "print_name('ภาวิณี')"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -407,7 +407,7 @@
       "metadata": {
         "id": "jXLKXL2lXTnE"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -423,7 +423,7 @@
         "id": "Es0Z5MaAXWJD",
         "outputId": "2f5bd5f3-8a7c-41b3-b07b-2ddd89c4c71d"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -480,7 +480,7 @@
         "    st = f'ชื่อ {name} นามสกุล {surname} รหัส {ID}'\n",
         "    return(st)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -496,7 +496,7 @@
         "id": "bFWAdx7NYbsG",
         "outputId": "48be5f23-b0c1-4540-e192-2888c4385050"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -526,7 +526,7 @@
       "source": [
         "print_fullname(name='ภาวิณี',surname='หน่อสีดา',ID='663020288-2')"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -562,7 +562,7 @@
       "metadata": {
         "id": "AxaFuq6aYm5q"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -577,7 +577,7 @@
         "id": "ecO518L1ZLet",
         "outputId": "c09d761c-fd29-4a26-83e7-a16bfe628bf6"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -610,7 +610,7 @@
         "id": "Ae6C6-DTWFOD",
         "outputId": "88e4d3d0-d9c3-4fc5-d877-426fadfae449"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -630,7 +630,7 @@
       "metadata": {
         "id": "yPtH94N0WtsE"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -646,7 +646,7 @@
         "id": "AbT5pKVYWRBn",
         "outputId": "d619cbf9-07d3-42d4-da68-4fff4f6277b8"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -666,7 +666,7 @@
       "metadata": {
         "id": "l_fW68dyXDw3"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -750,7 +750,7 @@
         "    st2=f'เกรดวิชา Data Viz >>> {grade}'\n",
         "    print(st2)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -765,7 +765,7 @@
       "source": [
         "print_2lines_default('ภาวิณี','หน่อสีดา','663020288-2')"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -789,7 +789,7 @@
       "source": [
         "print_2lines_default('ภาวิณี','หน่อสีดา','663020288-2','A')"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -813,7 +813,7 @@
         "id": "Au_P2Cm8ZDXL",
         "outputId": "dae81d80-cd07-452e-ac9b-a3004c32e277"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -838,7 +838,7 @@
         "id": "cLGa_pO1Zv1U",
         "outputId": "a91e8c3c-c728-4949-c6d7-d228333971e4"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1000,7 +1000,7 @@
       "metadata": {
         "id": "fhXVwwBdbSLa"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1016,7 +1016,7 @@
         "id": "FycXMYQCchkF",
         "outputId": "33c0ecc4-adfb-4751-e3cc-135448b59027"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1177,7 +1177,7 @@
       "metadata": {
         "id": "W4u8Ip1LgF52"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1199,7 +1199,7 @@
         "id": "Fzt2NI81gqhw",
         "outputId": "e24ecc79-2e3d-4593-d070-736b724ac3be"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1278,7 +1278,7 @@
         "id": "T3zJRtlKk22C",
         "outputId": "703f4f6c-37ac-45e3-edc9-01bd913d4251"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1301,7 +1301,7 @@
         "id": "SYYWeBUMk-HA",
         "outputId": "c854911e-df07-4139-8820-7426b621d0dc"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1359,14 +1359,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NcT-s7TEbPqg",
-        "outputId": "12a14bbe-f3ff-42c8-bbb3-6f9a0f6097f8"
+        "outputId": "b935c6bb-7edf-49be-e7ed-da73f82330ac"
       },
       "source": [
         "for i in [1,2,3] :\n",
         "    o = i**2\n",
         "    print (f'this member = {i} after process = {o}')"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -1392,16 +1392,48 @@
       "cell_type": "code",
       "metadata": {
         "id": "kstoI_CEbPqh",
-        "outputId": "1f66fa4a-09f2-44e8-89e0-299a9388f0c1",
+        "outputId": "9b1fb7f3-c3d9-42a3-c0b2-ff8135e93ac1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "for i in 'Thanapong':\n",
-        "    print(f'{i} -> / ' )"
+        "    print(f'{i} -> /' )"
       ],
-      "execution_count": null,
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "T -> /\n",
+            "h -> /\n",
+            "a -> /\n",
+            "n -> /\n",
+            "a -> /\n",
+            "p -> /\n",
+            "o -> /\n",
+            "n -> /\n",
+            "g -> /\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mQmh0Ip-V8qR",
+        "outputId": "f56de942-5038-49d9-8967-ad1f9719200e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "for i in 'Thanapong':\n",
+        "    print(f'{i} -> / ' ,end = '\\n') #สั่งให้ print แบบเว้นบรรทัด"
+      ],
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -1422,24 +1454,24 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "mQmh0Ip-V8qR",
-        "outputId": "0e01aa3e-f288-4865-d65d-2f2711066413",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
       "source": [
         "for i in 'Thanapong':\n",
-        "    print(f'{i} -> / ' ,end = '') #สั่งให้ print แบบ ไม่เว้นบรรทัด"
+        "    print(f'{i} -> / ' ,end = ' ') #สั่งให้ print แบบ ไม่เว้นบรรทัด"
       ],
-      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TVF6yATH-5Ru",
+        "outputId": "da5e8b99-63d6-44b1-ef75-32b3286eb9af"
+      },
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "T -> / h -> / a -> / n -> / a -> / p -> / o -> / n -> / g -> / "
+            "T -> /  h -> /  a -> /  n -> /  a -> /  p -> /  o -> /  n -> /  g -> /  "
           ]
         }
       ]
@@ -1457,7 +1489,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "ensAuLXBW-0P",
-        "outputId": "e73e37e9-cdcf-47c4-f47a-765e7188860c",
+        "outputId": "052c7524-b988-48c1-a7f2-3ee0edc23277",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1466,7 +1498,7 @@
         "range5_output = range(5)\n",
         "print(list(range5_output))"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -1481,7 +1513,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "r8JXggPKXrEx",
-        "outputId": "bcb4fe84-093e-4623-d62c-2c227d1cceec",
+        "outputId": "4f6a94ea-4caf-4cda-e68a-3aeaeb33137b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1490,7 +1522,7 @@
         "for i in range(100):\n",
         "    print('งง',end=' ')"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -1505,7 +1537,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "RLvhNqw8YpKa",
-        "outputId": "19ae69a5-474b-4d30-f4ce-bdeddf084c71",
+        "outputId": "2bf7c07f-e115-474e-ea62-2b4a767f14af",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1513,7 +1545,7 @@
       "source": [
         "list(range(1,11)) #เริ่มต้นเป็นวงทึบ จบเป็นวงกลมโปร่ง เหมือน list slicing"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1523,7 +1555,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 11
         }
       ]
     },
@@ -1531,7 +1563,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "MqXQ9NLGcW-r",
-        "outputId": "ab839a9f-525a-40d4-b7d1-4b8f0d4de3a7",
+        "outputId": "d5cb877a-cd81-491a-96c2-b20251dfccd8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1539,7 +1571,7 @@
       "source": [
         "list(range(-3,20,4))"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1549,7 +1581,78 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## วนลูปโดยไม่สนใจทั้งสมาชิกและลำดับ"
+      ],
+      "metadata": {
+        "id": "GLT2t_H0AhfI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "index = 0\n",
+        "for i in 'Pawinee':\n",
+        "  print(f'สมาชิกคือ {i} เป็นลำดับที่ {index}')\n",
+        "  index += 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0G_P_iEvAn_h",
+        "outputId": "66d158fe-d65d-429c-f034-58244c86d5da"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "สมาชิกคือ P เป็นลำดับที่ 0\n",
+            "สมาชิกคือ a เป็นลำดับที่ 1\n",
+            "สมาชิกคือ w เป็นลำดับที่ 2\n",
+            "สมาชิกคือ i เป็นลำดับที่ 3\n",
+            "สมาชิกคือ n เป็นลำดับที่ 4\n",
+            "สมาชิกคือ e เป็นลำดับที่ 5\n",
+            "สมาชิกคือ e เป็นลำดับที่ 6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i,index in enumerate('Pawinee'):\n",
+        "  print(f'สมาชิกคือ {i} เป็นลำดับที่ {index}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xQaS4AUXBCI4",
+        "outputId": "efab0998-c62a-4b1c-f407-f4c64cbae416"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "สมาชิกคือ 0 เป็นลำดับที่ P\n",
+            "สมาชิกคือ 1 เป็นลำดับที่ a\n",
+            "สมาชิกคือ 2 เป็นลำดับที่ w\n",
+            "สมาชิกคือ 3 เป็นลำดับที่ i\n",
+            "สมาชิกคือ 4 เป็นลำดับที่ n\n",
+            "สมาชิกคือ 5 เป็นลำดับที่ e\n",
+            "สมาชิกคือ 6 เป็นลำดับที่ e\n"
+          ]
         }
       ]
     },
@@ -1567,7 +1670,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "TKRcpd5DbPqi",
-        "outputId": "b18bd9af-fe48-4979-ba91-f8faf2a8787a",
+        "outputId": "252eeb64-7cdb-4063-8de9-c62a50d3a145",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1579,7 +1682,7 @@
         "        print('  ', name1,' x ',name2,' = ',name1*name2)\n",
         "    print('the inner loop is end')"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -1627,6 +1730,57 @@
             "   4  x  11  =  44\n",
             "   4  x  12  =  48\n",
             "the inner loop is end\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Quiz 7 วนลูป แสดงค่าตัวเลขออกมาเป็นสามเหลี่ยมตามตัวอย่างดังนี้\n",
+        "\n",
+        "ex.\n",
+        "\n",
+        "1\n",
+        "\n",
+        "2 4\n",
+        "\n",
+        "3 6 9\n",
+        "\n",
+        "4 8 12 16\n",
+        "\n",
+        "5 10 15 20 25"
+      ],
+      "metadata": {
+        "id": "W4ZtIwawCk1G"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(1, 6):  # Outer loop for rows\n",
+        "    for j in range(1, i + 1):  # Inner loop for columns\n",
+        "        print(i * j, end=\" \")\n",
+        "    print()  # Move to the next line after each row"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "75ORItseCikZ",
+        "outputId": "e19293ef-b792-4bda-c949-a25edfb5e1f5"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 \n",
+            "2 4 \n",
+            "3 6 9 \n",
+            "4 8 12 16 \n",
+            "5 10 15 20 25 \n"
           ]
         }
       ]
@@ -2419,6 +2573,20 @@
       "source": [
         "# Finish"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5a0b8ffc"
+      },
+      "source": [
+        "for i in range(1, 6):  # Outer loop for rows\n",
+        "    for j in range(1, i + 1):  # Inner loop for columns\n",
+        "        print(i * j, end=\" \")\n",
+        "    print()  # Move to the next line after each row"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
