--- a/Dictionary_Function_Loop_Condition_2025.ipynb
+++ b/Dictionary_Function_Loop_Condition_2025.ipynb
@@ -1737,7 +1737,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Quiz 7 วนลูป แสดงค่าตัวเลขออกมาเป็นสามเหลี่ยมตามตัวอย่างดังนี้\n",
+        "### Quiz 7 วนลูป แสดงค่าตัวเลขออกมาเป็นสามเหลี่ยมตามตัวอย่างดังนี้\n",
         "\n",
         "ex.\n",
         "\n",
@@ -1805,7 +1805,7 @@
         "    for friend in friendS:\n",
         "        print(f'{I} {feeling} {friend}')"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -1814,35 +1814,34 @@
         "id": "_oVKj4SRfGS6"
       },
       "source": [
-        "list_friends = ['พี่บูม','ดายน์','แตงโม','ฝน','พี่เจ็ท','น้องแคมป์']"
+        "list_friends = ['คุณหนูเบียร์','พ่อใหญ่เฟิร์ส','อ้ายสีหนุ่ม','จ่าหนึ่ง','บักโส']"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "RepVZqu6bPqi",
-        "outputId": "3153d88c-bb4e-44af-e3e8-1944d1a7d788",
+        "outputId": "db06b6b5-de1f-4abb-9660-6537817181c8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "print_feelings('เจมส์',list_friends)"
+        "print_feelings('แก้ม',list_friends)"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "เจมส์ คิดถึง พี่บูม\n",
-            "เจมส์ คิดถึง ดายน์\n",
-            "เจมส์ คิดถึง แตงโม\n",
-            "เจมส์ คิดถึง ฝน\n",
-            "เจมส์ คิดถึง พี่เจ็ท\n",
-            "เจมส์ คิดถึง น้องแคมป์\n"
+            "แก้ม คิดถึง คุณหนูเบียร์\n",
+            "แก้ม คิดถึง พ่อใหญ่เฟิร์ส\n",
+            "แก้ม คิดถึง อ้ายสีหนุ่ม\n",
+            "แก้ม คิดถึง จ่าหนึ่ง\n",
+            "แก้ม คิดถึง บักโส\n"
           ]
         }
       ]
@@ -1851,7 +1850,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "P20pDnVaf2vK",
-        "outputId": "cb59f42c-9fb9-4d1b-8b99-58294130d44d",
+        "outputId": "cd4e1e82-1f31-412f-c5e2-4109df87778a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1859,18 +1858,17 @@
       "source": [
         "print_feelings('เจมส์',list_friends,feeling='รัก')"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "เจมส์ รัก พี่บูม\n",
-            "เจมส์ รัก ดายน์\n",
-            "เจมส์ รัก แตงโม\n",
-            "เจมส์ รัก ฝน\n",
-            "เจมส์ รัก พี่เจ็ท\n",
-            "เจมส์ รัก น้องแคมป์\n"
+            "เจมส์ รัก คุณหนูเบียร์\n",
+            "เจมส์ รัก พ่อใหญ่เฟิร์ส\n",
+            "เจมส์ รัก อ้ายสีหนุ่ม\n",
+            "เจมส์ รัก จ่าหนึ่ง\n",
+            "เจมส์ รัก บักโส\n"
           ]
         }
       ]
@@ -1879,38 +1877,28 @@
       "cell_type": "code",
       "metadata": {
         "id": "SzHamL8JhKG4",
-        "outputId": "19fac0b6-f144-486a-8200-8e246090c9d1",
+        "outputId": "eb2ed748-ea18-4daf-e7ce-135add0ad8ca",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "print_feelings('เจมส์',list_friends,'รัก')"
+        "print_feelings('แก้ม',list_friends,'ซัง')"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "เจมส์ รัก พี่บูม\n",
-            "เจมส์ รัก ดายน์\n",
-            "เจมส์ รัก แตงโม\n",
-            "เจมส์ รัก ฝน\n",
-            "เจมส์ รัก พี่เจ็ท\n",
-            "เจมส์ รัก น้องแคมป์\n"
+            "แก้ม ซัง คุณหนูเบียร์\n",
+            "แก้ม ซัง พ่อใหญ่เฟิร์ส\n",
+            "แก้ม ซัง อ้ายสีหนุ่ม\n",
+            "แก้ม ซัง จ่าหนึ่ง\n",
+            "แก้ม ซัง บักโส\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "จบ 24 มิย 67"
-      ],
-      "metadata": {
-        "id": "GJAB4hnvnAX8"
-      }
     },
     {
       "cell_type": "markdown",
@@ -2028,7 +2016,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "HI0F-4HobPqj",
-        "outputId": "f5dff6b6-6102-4445-cc19-4574cf6790b2",
+        "outputId": "dabb32aa-cf59-41dd-ce88-288a67f5dcff",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2037,7 +2025,7 @@
         "name_grade = {'พันทิพา' : 'B','ศุภนิตา' : 'C','ปนัดดา' : 'A','ทรงกลด' : 'F'}\n",
         "name_grade"
       ],
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2047,7 +2035,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 27
         }
       ]
     },
@@ -2055,16 +2043,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "jWf8aBmpbPqj",
-        "outputId": "d19b353a-86f8-4dcc-e1d5-a5a0d233c332",
+        "outputId": "f11255f9-e3ef-4d7b-d06f-5e7420884a09",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 56
+          "height": 36
         }
       },
       "source": [
         "name_grade['ปนัดดา']"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2077,7 +2065,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 28
         }
       ]
     },
@@ -2091,9 +2079,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0tXZc6kgYPgm",
-        "outputId": "13096d92-02b7-4de1-9845-3552562916b2"
+        "outputId": "9e74dc13-e350-4b62-c52a-bfc6c81bdcf4"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2103,7 +2091,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 29
         }
       ]
     },
@@ -2117,9 +2105,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zEqstk33YRxp",
-        "outputId": "e01dc8af-865a-4ba3-809c-370371d8409e"
+        "outputId": "4946bc36-34ae-4e00-f758-721d7136268f"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2129,7 +2117,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 30
         }
       ]
     },
@@ -2138,7 +2126,7 @@
       "metadata": {
         "scrolled": true,
         "id": "eDqhoebhbPqj",
-        "outputId": "e3bed2bc-662c-4001-c6af-548dd9b7f0fc",
+        "outputId": "af07d7ab-7510-4372-8d30-0b0f6595946e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2147,7 +2135,7 @@
         "for i in name_grade.keys():\n",
         "    print(i)"
       ],
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -2165,7 +2153,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Imvq4faObPqj",
-        "outputId": "4debf4e7-78ed-431a-8b4a-61f4500d39a8",
+        "outputId": "e5564ce0-754e-46bc-e616-482aab304369",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2174,7 +2162,7 @@
         "for i in name_grade.keys():\n",
         "    print(f'{i} ได้เกรด {name_grade[i]}')"
       ],
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -2275,6 +2263,148 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ตัวอย่าง quiz 6"
+      ],
+      "metadata": {
+        "id": "lCpIYmztQH-N"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# prompt: สร้าง function คำนวณจำนวน วินาที ที่แตกต่างระหว่าง input hh:mm:ss, day of the week 2 ค่า\n",
+        "\n",
+        "from datetime import datetime\n",
+        "\n",
+        "def get_seconds_diff_with_days(start_time_str, end_time_str):\n",
+        "    \"\"\"\n",
+        "    คำนวณจำนวนวินาทีที่แตกต่างระหว่างวันเวลาเริ่มต้นและสิ้นสุด\n",
+        "    ในรูปแบบ \"HH:MM:SS, DayOfWeek\"\n",
+        "\n",
+        "    Args:\n",
+        "        start_time_str (str): สตริงวันเวลาเริ่มต้น\n",
+        "        end_time_str (str): สตริงวันเวลาสิ้นสุด\n",
+        "\n",
+        "    Returns:\n",
+        "        int: จำนวนวินาทีทั้งหมด หรือ None หากเกิดข้อผิดพลาด\n",
+        "    \"\"\"\n",
+        "    sec_in_day = 24 * 3600  # วินาทีใน 1 วัน\n",
+        "\n",
+        "    # ไม่ใช้ dictionary หรือ map สำหรับแปลงชื่อวันเป็นตัวเลข\n",
+        "    def get_day_number(day_name):\n",
+        "        # แปลงชื่อวันในสัปดาห์เป็นตัวเลข (0=Monday, 6=Sunday)\n",
+        "        # ใช้ if-elif-else แทน dictionary หรือ map\n",
+        "        if day_name == \"Monday\": return 0\n",
+        "        elif day_name == \"Tuesday\": return 1\n",
+        "        elif day_name == \"Wednesday\": return 2\n",
+        "        elif day_name == \"Thursday\": return 3\n",
+        "        elif day_name == \"Friday\": return 4\n",
+        "        elif day_name == \"Saturday\": return 5\n",
+        "        elif day_name == \"Sunday\": return 6\n",
+        "        else: return -1  # ค่าผิดพลาดสำหรับชื่อวันที่ไม่ถูกต้อง\n",
+        "\n",
+        "    def parse_time_day_string(time_day_string):\n",
+        "        # แยกส่วนเวลาและส่วนวันโดยการค้นหาตำแหน่งของ \", \"\n",
+        "        comma_index = -1\n",
+        "        for i in range(len(time_day_string) - 2):\n",
+        "            if time_day_string[i:i+2] == ', ':\n",
+        "                comma_index = i\n",
+        "                break\n",
+        "\n",
+        "        if comma_index == -1:\n",
+        "             raise ValueError(\"รูปแบบอินพุตไม่ถูกต้อง: ไม่พบ ', ' เพื่อแยกเวลาและวัน\")\n",
+        "\n",
+        "        time_part = time_day_string[:comma_index]\n",
+        "        day_part = time_day_string[comma_index + 2:]\n",
+        "\n",
+        "        # แยกชั่วโมง นาที วินาทีด้วยการค้นหาตำแหน่ง ':' (ไม่ใช้ split)\n",
+        "        first_colon_idx = -1\n",
+        "        second_colon_idx = -1\n",
+        "        for i, char in enumerate(time_part):\n",
+        "            if char == ':':\n",
+        "                if first_colon_idx == -1:\n",
+        "                    first_colon_idx = i\n",
+        "                else:\n",
+        "                    second_colon_idx = i\n",
+        "                    break\n",
+        "\n",
+        "        if first_colon_idx == -1 or second_colon_idx == -1:\n",
+        "             raise ValueError(\"รูปแบบเวลาไม่ถูกต้อง: ต้องอยู่ในรูปแบบ HH:MM:SS\")\n",
+        "\n",
+        "        # ดึงส่วนของชั่วโมง นาที วินาทีออกมา (ไม่ใช้ slicing โดยตรงถ้าต้องการหลีกเลี่ยง)\n",
+        "        # แต่วิธีที่ง่ายที่สุดคือ slicing\n",
+        "        h_str = time_part[:first_colon_idx]\n",
+        "        m_str = time_part[first_colon_idx + 1:second_colon_idx]\n",
+        "        s_str = time_part[second_colon_idx + 1:]\n",
+        "\n",
+        "        # แปลงเป็นจำนวนเต็ม\n",
+        "        h = int(h_str)\n",
+        "        m = int(m_str)\n",
+        "        s = int(s_str)\n",
+        "\n",
+        "        # แปลงชื่อวันเป็นตัวเลข\n",
+        "        day_num = get_day_number(day_part)\n",
+        "        if day_num == -1:\n",
+        "            raise ValueError(f\"ชื่อวันไม่ถูกต้อง: {day_part}\")\n",
+        "\n",
+        "        # คำนวณวินาทีรวมจากเริ่มต้นสัปดาห์\n",
+        "        return day_num * sec_in_day + h * 3600 + m * 60 + s\n",
+        "\n",
+        "    try:\n",
+        "        start_total_seconds = parse_time_day_string(start_time_str)\n",
+        "        end_total_seconds = parse_time_day_string(end_time_str)\n",
+        "\n",
+        "        # จัดการกรณีที่เวลาสิ้นสุดน้อยกว่าเวลาเริ่มต้น (ข้ามสัปดาห์)\n",
+        "        if end_total_seconds < start_total_seconds:\n",
+        "            # เพิ่มจำนวนวินาทีของ 1 สัปดาห์\n",
+        "            end_total_seconds += 7 * sec_in_day\n",
+        "\n",
+        "        return end_total_seconds - start_total_seconds\n",
+        "\n",
+        "    except (ValueError, IndexError) as e:\n",
+        "        print(f\"เกิดข้อผิดพลาดในการประมวลผลข้อมูล: {e}\")\n",
+        "        return None\n",
+        "\n",
+        "# ตัวอย่างการใช้งาน:\n",
+        "print(f'ช่วงเวลาคือ {get_seconds_diff_with_days(\"12:30:15, Wednesday\", \"13:41:07, Thursday\")} วินาที')\n",
+        "print(f'ช่วงเวลาคือ {get_seconds_diff_with_days(\"16:06:09, Sunday\", \"11:11:11, Tuesday\")} วินาที')\n",
+        "print(f'ช่วงเวลาคือ {get_seconds_diff_with_days(\"12:53:15, Monday\", \"00:59:25, Tuesday\")} วินาที')\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "Zi5lFOp0QNm0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# HW3 เพิ่ม loop เข้าไปใน Quiz 6 โดยวนลูป คำนวณ วินาที ในโจทย์ ต่อไปนี้\n",
+        "\n",
+        "\n",
+        "\n",
+        "```\n",
+        "# This is formatted as code\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "No2Eu5akSmQW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "EYkONXuaS_vb"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
